[package]
name = "m"
version = "1.1.1"
authors = ["Jarda F <jarda@jarda.info>"]
edition = "2018"

[dependencies]
crossterm = "0.26.1"
duct = "0.13.6"
lazy_static = "1.4.0"
notify-rust = "4.8.0"
regex = { version = "1.7.3", default_features = false, features = ["std", "unicode-perl"] }
which = "4.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
